--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "parcel": "^1.12.4",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "fractional": "^1.0.0"
   }
 }
